# OTUS-Homeworks

./: .gitignore  README.md
courses/: README.md  optimization_report.xlsx  pyproject.toml
courses/src/courses_app/: admin.py  forms.py  models.py  tasks.py  views.py
courses/src/courses_app/migrations/: 0001_initial.py
courses/src/courses_app/templates/courses/: contact.html  contact_success.html  course_confirm_delete.html  course_detail.html  course_form.html  course_list.html  instructor_detail.html
courses/src/courses_project/: asgi.py  settings.py  urls.py  wsgi.py
courses/src/scripts/: populate_db.py
homework01/: parser.py  readme.md  requirements.txt
homework02/: loto.py  readme.md
homework03/: README.md
homework03/loto/: loto.py
homework03/loto/tests/: test_loto.py
homework03/parser/tests/: test_parser.py
my_blog/: .dockerignore  README.md  dockerfile  main.py  requirements.txt
my_blog/app/: models.py  queries.py  setup.py
my_blog/app/routes/: auth.py  contact.py  index.py  posts.py  tags.py
my_blog/app/utils/: cookies.py  security.py
my_blog/blog/: models.py  queries.py  setup.py
my_blog/config/: settings.py
my_blog/scripts/: generate_secret_key.py
my_blog/static/css/: style.css
my_blog/static/js/: messageHandler.js
my_blog/templates/: base.html  contact.html  edit_post.html  index.html  login.html  new_post.html  post.html  posts.html  registr.html
my_blog/tests/: conftest.py  test_models.py  test_queries.py
