[tool.poetry]
name = "courses"
version = "0.1.0"
description = "An educational platform for programming courses"
authors = ["zart227 <zart227@gmail.com>"]
readme = "README.md"
packages = [{include = "courses", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
